typescript/checker/tests/conformance/classes/constructorDeclarations/automaticConstructors/derivedClassWithoutExplicitConstructor.ts.stderr
error: NoNewSignature {
    span: Span {
        lo: BytePos(
            151,
        ),
        hi: BytePos(
            158,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/constructorDeclarations/automaticConstructors/derivedClassWithoutExplicitConstructor.ts:11:13
   |
11 | var r = new Derived(); // error
   |             ^^^^^^^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            185,
        ),
        hi: BytePos(
            192,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/constructorDeclarations/automaticConstructors/derivedClassWithoutExplicitConstructor.ts:12:14
   |
12 | var r2 = new Derived(1); 
   |              ^^^^^^^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            364,
        ),
        hi: BytePos(
            365,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/constructorDeclarations/automaticConstructors/derivedClassWithoutExplicitConstructor.ts:24:13
   |
24 | var d = new D(); // error
   |             ^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            392,
        ),
        hi: BytePos(
            393,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/constructorDeclarations/automaticConstructors/derivedClassWithoutExplicitConstructor.ts:25:14
   |
25 | var d2 = new D(new Date()); // ok
   |              ^

